# sphinx_inv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: pull_request_template.md
.github/workflows/: release-plz.yml
src/: error.rs  header.rs  inv_file.rs  lib.rs  priority.rs  readers.rs  reference.rs  types.rs  writers.rs
src/roles/: c_role.rs  cpp_role.rs  js_role.rs  math_role.rs  mod.rs  py_role.rs  rst_role.rs  std_role.rs
