[package]
name         = "sphinx_inv"
version      = "0.1.0"
authors      = ["Sam Vente <savente93@proton.me>"]
edition      = "2024"
rust-version = "1.85"
description  = "A rust library to parse Sphinx `objects.inv` files"
readme       = "README.md"
license      = "MIT"


documentation = "https://docs.rs/sphinx_inv"
repository    = "https://github.com/aslowwriter/sphinx_inv"


[lib]
path = "src/lib.rs"


[dependencies]
flate2            = "1.1.9"
thiserror         = "2.0.18"
winnow            = { version = "1.0.0", features = ["simd"] }

[profile.release]
debug         = true
lto           = "fat"
codegen-units = 1
strip         = "symbols"

[profile.dev]
debug = 0

[profile.bench]
inherits = "release"
debug    = 2         # necessary for many profilers
strip    = "none"    #only affects binary size, not runtime, but makes profiling easier

# please tell me what to do Clippy-senpai
[lints.clippy]
pedantic                   = { level = "warn", priority = -1 }
single_match               = "warn"
single_match_else          = "warn"
needless_match             = "warn"
needless_late_init         = "warn"
redundant_pattern_matching = "warn"
redundant_pattern          = "warn"
redundant_guards           = "warn"
collapsible_match          = "warn"
match_single_binding       = "warn"
match_same_arms            = "warn"
match_ref_pats             = "warn"
match_bool                 = "warn"
needless_bool              = "deny"
unwrap_used                = "warn"
expect_used                = "warn"
